--- a/JS_l4/userpage.html
+++ b/JS_l4/userpage.html
@@ -14,18 +14,26 @@
     <form action="" method="get" name="userInfo" class="userPage">
         <div class="blockInfo">
             <div>
-                <b>First Name:</b> <input type="text" name="fname" id="fname" class="field1" />
+                <b>First Name:</b>
+                <span class="alertFirstName">Wrong first name</span> 
+                <input type="text" name="fname" id="fname" class="field1" />
             </div>
             <div>
-                <b>Year of birth:</b> <input type="text" name="year" id="year" class="field1" />
+                <b>Year of birth:</b> 
+                <span class="alertYear">Wrong year of birth</span>
+                <input type="text" name="year" id="year" class="field1" />
             </div>
             <div>
-                <b>Phone number:</b> <input type="text" name="phone" id="phone" class="field1" />
+                <b>Phone number:</b> 
+                <span class="alertPhone">Wrong phone format</span> 
+                <input type="text" name="phone" id="phone" class="field1" />
             </div>
         </div>
         <div class="blockInfo">
             <div>
-                <b>Last Name:</b> <input type="text" name="lname" id="lname" class="field1" />
+                <b>Last Name:</b> 
+                 <span class="alertLastName">Wrong last name</span> 
+                <input type="text" name="lname" id="lname" class="field1" />
             </div>
             <div>
                 <b>Gender:</b>
